# pokemon_stats_package

./: LICENSE.txt  README.md  app_cliente.py  setup.cfg  setup.py
pokemon_stats/: pokemon_stats.py
pokemon_stats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test.py
