[metadata]
name = pokemon_stats_package
version = 0.1.0
author = Angela Chica
author_email = angelachicaortega@gmail.com
description = Libreria para proyecto final curso python
long_description = file: README.md
long_description_content_type = markdown
license = MIT License

[options]
packages = find:
python_requires = >=3.6
install_requires =
    unittest
    pandas
    sqlalchemy
    requests
    concurrent
    functools
    cProfile