[metadata]
name = pokemon_stats_package
version = 0.5
author = Angela Chica
author_email = angelachicaortega@gmail.com
description = Librería para proyecto final sobre stats de Pokemon
license = MIT
url = https://github.com/angelachica/pokemon_stats_package
download_url = https://github.com/angelachica/pokemon_stats_package/archive/v0.5.tar.gz
keywords = pokemon, stats, grupo

[options]
packages = find:
install_requires =
    unittest
    pandas
    sqlalchemy
    requests
    concurrent
    functools
    cProfile

[options.packages.find]
where = .

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
